--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head>
+        <link href="css/style.css" rel="stylesheet" />
         <title>Dennis is a cumquat</title>
     </head>
     <body>
