--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
         <title>Dennis is a cumquat</title>
     </head>
     <body>
