--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Dennis is a cumquat</title>
     </head>
     <body>
-        <p>Hello World!</p>
-        
+        <header>Virtual Piano</header>
+        <div id="photo">photo goes here</div>
+        <div id="details">details go here</div>
+        <footer>bottom of page</footer>
     </body>
 </html>
