added more of website

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     </head>
     <body>
         <header>Virtual Piano</header>
-        <div id="photo">photo goes here</div>
-        <div id="details">details go here</div>
-        <footer>bottom of page</footer>
+        <main>
+            <div id="photo">
+                <img src="assets/Keyboard.PNG" width="50%">
+            </div>
+            <div id="details">
+                <h1></h1>
+                <p></p>
+            </div>
+            <footer>bottom of page</footer>
+        </main>
     </body>
 </html>
