--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html> 
     <head>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
-        <title>Dennis is a cumquat</title>
+        <title>Virtual Piano</title>
     </head>
     <body>
         <header>Virtual Piano</header>
         <main>
+            <div id="melody"></div>
             <div id="photo">
                 <img src="assets/Keyboard.PNG" width="50%">
             </div>
             <div id="details">
-                <h1></h1>
-                <p></p>
+                <h1 class="text">Basic Controls</h1>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <footer>bottom of page</footer>
         </main>
